# youtube-playlist-downloader

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  download_history.txt  downloader.py  gui.py  pyproject.toml  requirements.txt  test_downloader.py  test_playlists.py
src/: config.py  youtube_downloader.py
static/css/: style.css
static/js/: downloader.js
templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_custom_download_location.py  test_gui.py  test_integration.py  test_playlist_functionality.py  test_youtube_downloader.py
