# Modern Python project configuration file that consolidates all project metadata, dependencies, build configuration,
# and tool settings into one, replacing the need for multiple files like requirements.txt configuration files.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-playlist-downloader"
version = "0.6.9"
description = "A Python application for downloading YouTube media"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Tristan Duin"},
    {name = "Patrick Kahle"},
    {name = "Mike Watts"},
    {name = "Jacob Agbetor"},
]
keywords = ["youtube", "downloader", "video", "playlist", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: College Professor/Classmates",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
]

dependencies = [
    "yt-dlp>=2025.12.08",
    "flask>=3.0.0,<4.0.0",
    "werkzeug>=3.0.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
youtube-downloader = "cli:main"
youtube-downloader-gui = "gui:main"

[project.urls]
"Homepage" = "https://github.com/Tristan-Duin/youtube-playlist-downloader"
"Bug Reports" = "https://github.com/Tristan-Duin/youtube-playlist-downloader/issues"
"Source" = "https://github.com/Tristan-Duin/youtube-playlist-downloader"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["cli", "gui"]

[tool.setuptools.package-data]
"src" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]